<resources>
    <string name="author">WeiShuaiDev</string>

    <string name="tab_recommended">推荐</string>
    <string name="tab_dynamic">动态</string>
    <string name="tab_mine">我的</string>

    <!--登录模块-->
    <string name="login_user_name_text">用户名</string>
    <string name="login_password_text">密码</string>
    <string name="login_authorized_title">授权登陆</string>
    <string name="login_button">登录</string>
    <string name="login_quick_button">一键登录</string>

    <!--首页模块-->
    <string name="main_feedback">用户反馈</string>
    <string name="main_person">个人信息</string>
    <string name="main_update">版本更新</string>
    <string name="main_about">应用关于</string>
    <string name="main_login_out">退出登陆</string>

    <string name="notify_type">类型</string>
    <string name="notify_status">状态</string>
    <string name="unread">未读</string>
    <string name="readed">已读</string>

    <string name="created_at">创建于</string>
    <string name="forked_at">Forked from</string>

    <!--用户模块-->
    <string name="user_created_at_text">创建于</string>
    <string name="user_stared_text">星标</string>
    <string name="user_followers_text">粉丝</string>
    <string name="user_followed_text">关注</string>
    <string name="user_repository_text">仓库</string>

    <!--仓库模块-->
    <string name="repos_activity">动态</string>
    <string name="repos_readme">详情信息</string>
    <string name="repos_file">文件</string>
    <string name="repos_issue">Issues</string>
    <string name="repos_push">提交</string>

    <!--问题-->
    <string name="issue">问题</string>
    <string name="issue_all_tab">全部</string>
    <string name="issue_open_tab">打开</string>
    <string name="issue_close_tab">关闭</string>
    <string name="issue_input_tip_title">请输入标题</string>
    <string name="issue_input_tip_text">请输入答复哟</string>
    <string name="issue_title_empty">标题不能为空</string>
    <string name="issue_content_empty">内容不能为空</string>

    <string name="closeIssue">关闭？</string>
    <string name="openIssue">打开？</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="browser_open">浏览器打开</string>
    <string name="copy">复制链接</string>
    <string name="share">分享</string>

    <string name="logcat_login_user_name_entry">用户名为空!</string>
    <string name="logcat_login_password_entry">密码为空!</string>
    <string name="logcat_login_oauth_code">授权失败!</string>
    <string name="logcat_login_success">登录成功!</string>
    <string name="logcat_login_failed">登录失败!</string>
    <string name="logcat_hadCopy">已经复制到粘贴板</string>


    <string name="exit_app_tip">再次点击，退出应用程序</string>
</resources>
